@@ -105,6 +105,8 @@ Release 0.3.0 (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-227. NPE on HBaseInputStorageDriver when table contains a CF that's never been successfully written to (toffer via hashutosh)
+
   HCAT-226. HBase storage drivers should load hbase resources (hbase-site, hbase-default) for the user (toffer via hashutosh)
 
   HCAT-224. hcatalog e2e tests have the hive version hard coded we should read that from the hive build.properties (Arpit Gupta via hashutosh)
